[tool.poetry]
name = "pxpermute"
version = "0.1.0"
description = "Package interpreting models trained on multichannel data"
authors = ["Marr Lab"]
license = "Copyright (c) 2022 Marr Lab"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.7.3"
click = "^8.0.3"
numpy = "^1.21.5"
pandas = "^1.3.5"
scikit-learn = "^1.0.1"
scikit-image = "^0.19.2"
tqdm = "^4.62.3"
notebook = "^6.4.6"
captum = "^0.6.0"
scifAI = {git = "https://github.com/marrlab/scifAI.git"}
h5py = "^3.9.0"
monai = "^1.2.0"

[tool.poetry.scripts]
evaluate_channel_importance = "cli.__main__:evaluate_channel_importance"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
